Revert "Apply applicable CLAUDE.md code rules (keep builders, no records)"
This reverts commit f6ef7b38c70dcc3739de8ff0e67f09e42d57522f.