@@ -1,14 +1,13 @@
 package com.pgoogol.httpexchangelogger.sanitizer;
 
 import com.pgoogol.httpexchangelogger.autoconfigure.HttpExchangeLoggerProperties;
-import org.jspecify.annotations.Nullable;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.Objects;
 
 public class DefaultHeaderSanitizer implements HeaderSanitizer {
 
@@ -24,37 +23,37 @@ public class DefaultHeaderSanitizer implements HeaderSanitizer {
     private final boolean maskingEnabled;
 
     public DefaultHeaderSanitizer(SensitiveValueMasker masker,
-                                  HttpExchangeLoggerProperties.@Nullable Mask maskProperties) {
+                                  HttpExchangeLoggerProperties.Mask maskProperties) {
         this.masker = masker;
         this.defaultHeaderMasker = new SensitiveValueMasker(DEFAULT_SENSITIVE_HEADERS);
-        this.maskingEnabled = Objects.nonNull(maskProperties) && maskProperties.isEnabled();
+        this.maskingEnabled = maskProperties != null && maskProperties.isEnabled();
     }
 
     @Override
-    public @Nullable Map<String, List<String>> sanitize(@Nullable Map<String, List<String>> headers) {
-        if (Objects.isNull(headers) || headers.isEmpty()) {
+    public Map<String, List<String>> sanitize(Map<String, List<String>> headers) {
+        if (headers == null || headers.isEmpty()) {
             return headers;
         }
 
-        var result = new LinkedHashMap<String, List<String>>();
-        for (var entry : headers.entrySet()) {
-            var name = entry.getKey();
-            var values = entry.getValue();
+        Map<String, List<String>> result = new LinkedHashMap<>();
+        for (Map.Entry<String, List<String>> entry : headers.entrySet()) {
+            String name = entry.getKey();
+            List<String> values = entry.getValue();
 
             if (isSensitiveHeader(name)) {
                 result.put(name, maskAll(values));
             } else {
-                result.put(name, new ArrayList<>(Objects.requireNonNullElse(values, List.of())));
+                result.put(name, values == null ? Collections.emptyList() : new ArrayList<>(values));
             }
         }
         return result;
     }
 
-    private boolean isSensitiveHeader(@Nullable String name) {
-        if (Objects.isNull(name)) {
+    private boolean isSensitiveHeader(String name) {
+        if (name == null) {
             return false;
         }
-        var normalized = name.toLowerCase(Locale.ROOT);
+        String normalized = name.toLowerCase(Locale.ROOT);
         // Built-in credential headers are always masked, even when mask.enabled=false,
         // so disabling field masking can never leak Authorization/Cookie/etc.
         if (defaultHeaderMasker.isSensitive(normalized)) {
@@ -63,12 +62,12 @@ public class DefaultHeaderSanitizer implements HeaderSanitizer {
         return maskingEnabled && masker.isSensitive(normalized);
     }
 
-    private List<String> maskAll(@Nullable List<String> values) {
-        if (Objects.isNull(values) || values.isEmpty()) {
+    private List<String> maskAll(List<String> values) {
+        if (values == null || values.isEmpty()) {
             return List.of(SensitiveValueMasker.MASK);
         }
-        var masked = new ArrayList<String>(values.size());
-        for (var i = 0; i < values.size(); i++) {
+        List<String> masked = new ArrayList<>(values.size());
+        for (int i = 0; i < values.size(); i++) {
             masked.add(SensitiveValueMasker.MASK);
         }
         return masked;
